First version of fixing displaying cursor on mobile devices

--- a/src/index.scss
+++ b/src/index.scss
@@ -68,10 +68,14 @@ input {
   outline: none;
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 850px) {
   * {
     filter: none !important;
     backdrop-filter: none !important;
+  }
+
+  #cursor {
+    display: none;
   }
 }
 
